Fix cards being too small in some cases

--- a/content/stylesheets/pages/_contribute.scss
+++ b/content/stylesheets/pages/_contribute.scss
@@ -1,6 +1,6 @@
 .app-contribute-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1rem;
   margin-bottom: 2rem;
 }
